fix overflow

--- a/src/components/shared/Tray/Tray.module.scss
+++ b/src/components/shared/Tray/Tray.module.scss
@@ -7,7 +7,7 @@
   background-color: white;
   width: 100%;
   position: absolute;
-  height: 100%;
+  height: 550px;
   transition: top 0.35s ease;
   overflow: hidden;
 
